src/objects/Unit__c.object
<CustomObject>
    <fields>
        <fullName>AMI_chart_type__c</fullName>
        <inlineHelpText>Default value &quot;HUD Unadjusted&quot; will be updated upon save.</inlineHelpText>
        <label>AMI chart type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AMI_Chart_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMI_chart_year__c</fullName>
        <inlineHelpText>Default value latest year will be updated upon save.</inlineHelpText>
        <label>AMI chart year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accessible_Bathroom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Bathroom Accessible?</description>
        <inlineHelpText>Is the Bathroom Accessible?</inlineHelpText>
        <label>Accessible Bathroom?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessible_elevators__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessible elevators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMR_Minimum_Annual_Income_Needed__c</fullName>
        <description>Minimum Annual Income Needed for BMR Rental</description>
        <formula>BMR_Rental_Minimum_Monthly_Income_Needed__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Minimum Annual Income Needed for BMR Rental</inlineHelpText>
        <label>BMR Minimum Annual Income Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Rent_Monthly__c</fullName>
        <description>Monthly Rent for BMR Unit</description>
        <inlineHelpText>Monthly Rent for BMR Unit</inlineHelpText>
        <label>Monthly rent (if $)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Rental_Minimum_Monthly_Income_Needed__c</fullName>
        <formula>Rent_Multiple__c  *  BMR_Rent_Monthly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMR Rental Minimum Monthly Income Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Rental_Parking_Price_per__c</fullName>
        <description>Parking Price for BMR Rental</description>
        <inlineHelpText>Parking Price for BMR Rental</inlineHelpText>
        <label>BMR Rental Parking Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Rental_Required_Deposit__c</fullName>
        <description>Required Deposit for a BMR Rental</description>
        <inlineHelpText>Required Deposit for a BMR Rental</inlineHelpText>
        <label>BMR Rental Required Deposit</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Does_the_Bathroom_have_Grab_Bars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does the Bathroom have Grab Bars?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Kitchen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Kitchen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grab_bars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grab bars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Listing__c</field>
                <operation>equals</operation>
                <valueField>Marketing_Plan__c.Listing__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Marketing_Plan__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Occupancy__c</fullName>
        <formula>/* Change on 11/17 to account for special rules for SRO and Studio (0 bedroom) types 
(Number_of_bedrooms_formula__c * 2) + 1

IF(Number_of_bedrooms_formula__c = 0, 2, ((Number_of_bedrooms_formula__c * 2) + 1)) */

IF((Number_of_bedrooms_formula__c = 0) &amp;&amp; (ISPICKVAL(Unit_Type__c, &quot;SRO&quot;)), 1,
IF((Number_of_bedrooms_formula__c = 0) &amp;&amp; (NOT(ISPICKVAL(Unit_Type__c, &quot;SRO&quot;))), 2,
((Number_of_bedrooms_formula__c * 2) + 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Household_Income_Allowed__c</fullName>
        <description>Based on Household size, the maximum income allowed for the unit.</description>
        <inlineHelpText>Based on Household size, the maximum income allowed for the unit.</inlineHelpText>
        <label>Maximum Household Income Allowed</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Household_Size__c</fullName>
        <description>Maximum members of a household that are allowed in a unit.</description>
        <inlineHelpText>Maximum members of a household that are allowed in a unit.</inlineHelpText>
        <label>Maximum Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Occupancy__c</fullName>
        <description>Field will ultimately be hidden from page layout and is automatically determined based on number of Bedrooms. Field is used to hold the minimum occupancy based on bedrooms.</description>
        <formula>/*OLD FORMULA - Replaced 10/13. Pivotal story: https://www.pivotaltracker.com/story/show/131777421
/*IF (Number_of_Bedrooms__c &gt;1, Number_of_Bedrooms__c, 1)*/

IF(ISPICKVAL(Unit_Type__c,&apos;2 BR&apos;), 2, 
  IF(ISPICKVAL(Unit_Type__c,&apos;3 BR&apos;), 3,
    IF(ISPICKVAL(Unit_Type__c,&apos;4 BR&apos;), 4,
      IF(ISPICKVAL(Unit_Type__c,&apos;5 BR&apos;),5,
     1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to hold the minimum occupancy based on bedrooms.</inlineHelpText>
        <label>Min Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bathrooms__c</fullName>
        <label>Number of Bathrooms</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_bedrooms_formula__c</fullName>
        <formula>IF(ISPICKVAL(Unit_Type__c,&apos;Studio&apos;), 0.5, 
IF(ISPICKVAL(Unit_Type__c,&apos;Large Studio&apos;), 1, 
IF(ISPICKVAL(Unit_Type__c,&apos;1 BR&apos;), 1,
IF(ISPICKVAL(Unit_Type__c,&apos;2 BR&apos;), 2, 
IF(ISPICKVAL(Unit_Type__c,&apos;3 BR&apos;), 3,
IF(ISPICKVAL(Unit_Type__c,&apos;4 BR&apos;), 4,
IF(ISPICKVAL(Unit_Type__c,&apos;5 BR&apos;),5,
0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Accessibility_Information__c</fullName>
        <description>Other Accessibility Information</description>
        <inlineHelpText>Other Accessibility Information</inlineHelpText>
        <label>Other Accessibility Information</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Unit_Feature_1__c</fullName>
        <description>Other Unit Feature</description>
        <inlineHelpText>Other Unit Feature</inlineHelpText>
        <label>Other Unit Feature 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Unit_Feature_2__c</fullName>
        <label>Other Unit Feature 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Unit_Feature_3__c</fullName>
        <label>Other Unit Feature 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Space_Numbers__c</fullName>
        <label>Parking Space Numbers</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Friendly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pet Friendly?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Listing__c</field>
                <operation>equals</operation>
                <valueField>Pricing_Request__c.Listing__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pricing_Request__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_Grouping__c</fullName>
        <description>Displays the grouping where the Priority belongs, in order to be displayed on the front end. If a new Priority Type is added to the list, it needs to be added to this formula as well or it will default to null</description>
        <formula>CASE(TEXT(Priority_Type__c), &apos;Vision impaired&apos;, &apos;Communication&apos;, &apos;Mobility impaired&apos;, &apos;Mobility&apos;, &apos;Hearing impaired&apos;, &apos;Communication&apos;,&apos;Hearing/Vision impaired&apos;, &apos;Communication&apos;, &apos;Veteran&apos;, &apos;Other&apos;, &apos;Senior&apos;, &apos;Other&apos;, &apos;Developmental disabilities&apos;, &apos;Other&apos;, &apos;&apos;)</formula>
        <label>Priority Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Type__c</fullName>
        <label>Priority Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <description>Property Type (i.e. Condo, townhouse, single family, etc)</description>
        <inlineHelpText>Property Type (i.e. Condo, townhouse, single family, etc)</inlineHelpText>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Building Record Number</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rent_Multiple__c</fullName>
        <label>Rent Multiple</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_percent_of_income__c</fullName>
        <inlineHelpText>Monthly Rent (if % of income)</inlineHelpText>
        <label>Monthly Rent (if % of income)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reserved_Type__c</fullName>
        <label>Reserved Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smoking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sq_Ft__c</fullName>
        <label>Sq Ft</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>To be Built out, but is the unit currently occupied/available (includes in development). Will largely be a hidden field.</description>
        <inlineHelpText>To be Built out, but is the unit currently occupied/available (includes in development). Will largely be a hidden field.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Occupied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Floor__c</fullName>
        <label>Unit Floor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Square_Footage__c</fullName>
        <description>Square Footage of the Unit.</description>
        <inlineHelpText>Square Footage of the Unit.</inlineHelpText>
        <label>Unit Square Footage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>Description of units.</description>
        <inlineHelpText>Description of units.</inlineHelpText>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SRO</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>Large Studio</fullName>
                </value>
                <value>
                    <fullName>1 BR</fullName>
                </value>
                <value>
                    <fullName>2 BR</fullName>
                </value>
                <value>
                    <fullName>3 BR</fullName>
                </value>
                <value>
                    <fullName>4 BR</fullName>
                </value>
                <value>
                    <fullName>5 BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washer_dryer_hook_ups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Washer/dryer hook-ups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wheelchair_accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheelchair accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReservedCommunity__c</fullName>
        <formula>IF( ISPICKVAL(Property__r.Reserved_community_type__c,&quot;&quot;),false,true )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reserved community?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_AMI_for_Pricing_Unit__c</fullName>
        <description>% of Area Median Income for Pricing Unit.</description>
        <inlineHelpText>% of Area Median Income for Pricing Unit.</inlineHelpText>
        <label>% of AMI for Pricing Unit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>old_Rental_Minimum_Monthly_Income_Needed__c</fullName>
        <description>Minimum Monthly Income Needed for BMR Unit.</description>
        <inlineHelpText>Minimum Monthly Income Needed for BMR Unit.</inlineHelpText>
        <label>old Rental Minimum Monthly Income Needed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property__c</columns>
        <columns>Unit_Square_Footage__c</columns>
        <columns>NAME</columns>
        <columns>Number_of_Bedrooms__c</columns>
        <columns>Min_Occupancy__c</columns>
        <columns>Maximum_Household_Size__c</columns>
        <columns>Unit_Type__c</columns>
        <columns>Sq_Ft__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>L_Seven_Units_Details</fullName>
        <columns>NAME</columns>
        <columns>Listing__c</columns>
        <columns>Unit_Type__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>Number_of_Bathrooms__c</columns>
        <columns>Unit_Square_Footage__c</columns>
        <columns>Unit_Floor__c</columns>
        <columns>Max_Occupancy__c</columns>
        <columns>BMR_Rent_Monthly__c</columns>
        <columns>of_AMI_for_Pricing_Unit__c</columns>
        <columns>Rent_Multiple__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing__c</field>
            <operation>equals</operation>
            <value>L Seven</value>
        </filters>
        <label>L Seven Units Details</label>
    </listViews>
    <listViews>
        <fullName>Unit_Details</fullName>
        <columns>Property__c</columns>
        <columns>Listing__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>Unit_Type__c</columns>
        <columns>Number_of_Bathrooms__c</columns>
        <columns>Unit_Square_Footage__c</columns>
        <columns>Unit_Floor__c</columns>
        <columns>BMR_Rent_Monthly__c</columns>
        <columns>of_AMI_for_Pricing_Unit__c</columns>
        <columns>Maximum_Household_Size__c</columns>
        <columns>Rent_Multiple__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Unit Details</label>
    </listViews>
    <nameField>
        <displayFormat>UID-{0000000}</displayFormat>
        <label>Unit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <recordTypes>
        <fullName>BMR_Ownership</fullName>
        <active>true</active>
        <description>BMR Ownership</description>
        <label>BMR Ownership</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMR_Rental</fullName>
        <active>true</active>
        <description>BMR Rental</description>
        <label>BMR Rental</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChooseEitherRentDollarsOrPercent</fullName>
        <active>true</active>
        <description>Choose either &quot;Monthly rent (if $)&quot; or &quot;Monthly Rent (if % of income)&quot;, not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(BMR_Rent_Monthly__c)), NOT(ISBLANK( Rent_percent_of_income__c)))</errorConditionFormula>
        <errorMessage>Enter data in either &quot;Monthly rent (if $)&quot; or &quot;Monthly Rent (if % of income)&quot;, but not both.</errorMessage>
    </validationRules>
</CustomObject>